Fixed positioning and gaps between elements
1. Added 3 boxes to site.
2. Adjusted gaps between sections.
3.Fixed widths of sections.

--- a/styles/style.css
+++ b/styles/style.css
@@ -200,6 +200,27 @@ button:focus {
   margin-bottom: 2rem;
 }
 
+.site-boxes {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.box {
+  display: flex;
+  border: 2px solid rgb(94, 88, 88);
+  border-radius: 4px;
+  justify-content: center;
+  align-items: center;
+  font-size: 1rem;
+  font-weight: bold;
+  width: 100px;
+  height: 100px;
+  padding: 30px;
+  text-align: center;
+}
 
 /* Headings */
 
@@ -215,7 +236,7 @@ button:focus {
 
 .heading-underline {
   position: relative;
-  margin: 3rem 0 2rem 0;
+  margin: 1rem 0 2rem 0;
   padding-bottom: 0.5rem;
   border-bottom: 2px solid var(--orange-light);
   font-size: 1rem;
@@ -242,10 +263,10 @@ button:focus {
   flex-direction: row;
   justify-content: center;
   margin: 0 1em 1rem 0;
-  padding: 20px 30px 20px 20px;
+  padding: 20px 20px 10px 20px;
   border: 2px solid #e4e4e4;
   border-radius: 4px;
-  width: 326px;
+  width: 90%;
 } 
 
 .article__title {
@@ -289,17 +310,31 @@ button:focus {
 .bottom-articles {
   display: flex;
   flex-direction: row; 
+  width: 100%;
+  padding: 0;
+  gap: 15px;
 }
 
 .bottom-articles-a {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin: 0 1em 1rem 0;
-  padding: 20px 30px 20px 20px;
+  margin: 0;
+  padding: 20px;
   border: 2px solid #e4e4e4;
   border-radius: 4px;
-  width: 326px;
+  width: 50%;
+}
+
+.bottom-articles-b {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0;
+  padding: 20px;
+  border: 2px solid #e4e4e4;
+  border-radius: 4px;
+  width: 50%;
 }
 
 .fa {
@@ -348,4 +383,18 @@ button:focus {
   .main {
     padding-right: 2rem;
   }
+}
+
+@media screen and (max-width: 320px) {
+  .hero1 h1 {
+  font-size: 1rem;
+ }
+
+ .button2 {
+  width: auto;
+ }
+
+ .button3 {
+  width: auto;
+ } 
 }
